Wed Jul 10 15:38:48 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* examples/AMH/Sink_Server/AMH_Servant.h:
	* examples/AMH/Sink_Server/AMH_Servant.cpp:
	* examples/AMH/Sink_Server/Base_Server.cpp:
	* examples/AMH/Sink_Server/client.cpp:

	* examples/AMH/Sink_Server/client.cpp:
	* examples/AMH/Sink_Server/server.cpp:

	  Changed deprecated TAO_ENV_ exception macros to ACE_ENV_
	  exception macros.

Wed Jul 10 14:25:14 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tao/ccm_core/Component_Base.idl:
	* tao/ccm_core/CosPersistentState.idl: Moved these files under the new

Wed Jul 10 11:35:05 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/server.cpp (ST_AMH_Server):

	  Removed the changes of:
	  Mon Jul 8 11:05:44 2002 Mayur Deshpande <mayur@ics.uci.edu>
	  and instead did a simple ACE_const_cast instead.

	* examples/AMH/Sink_Server/AMH_Servant.cpp:
	* examples/AMH/Sink_Server/Base_Server.cpp:
	* examples/AMH/Sink_Server/Base_Server.h:
	* examples/AMH/Sink_Server/client.cpp:
	* examples/AMH/Sink_Server/mt_server.cpp:
	* examples/AMH/Sink_Server/st_server.cpp:

	  Used ACE_const_cast to convert string literals to 'char
	  *'s. Should fix the warnings for GCC-3.0.4 builds.

Wed Jul 10 10:19:25 2002  Mayur Deshpande  <mayur@ics.uci.edu>

	* tests/AMH_Exceptions/server.cpp (test_method):

	  Allocate the exception on the heap.  The ExceptionHolder now
	  requires that all exceptions it is constructed with, be allocated
	  on the heap since the ExceptionHolder takes over ownership of
	  the exception and deletes it later.

Wed Jul 10 12:19:39 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * TAO_IDL/include/utl_identifier.h:
        * TAO_IDL/include/utl_string.h:
        * TAO_IDL/include/utl_strlist.h:

          More files to which the conditional include of ace/streams.h
          is needed for BCB. Thanks again to Johnny Willemsen
          <jwillemsen@remedy.nl> for his help in maintaining the
          BCB builds.
